
- Fix bug # 3998, Next Char macro doesn't work. (Dale Anson)

}}}
{{{ UI Improvements

- Feature Request #520 Environment variables in Find dialog Directory
  (Alan Ezust)

- UI clean up, button spacing, borders, etc. (Dale Anson)

- Implemented feature request #493, ask for confirmation before closing all
  buffers. (Dale Anson)

- Refactor editing option pane into several tabs, allow user editing of modes
  lists, similar to editing the encoding options lists. This also fixes
  feature request #515. (Dale Anson)

- Updated NumericTextField to allow decimal numbers and only allow negative sign
  at the start of a number. (Dale Anson)

}}}
{{{ Miscellaneous

- Updated printing system with jEdit specific printer dialog, accurate page
  range printing, current page printing, printing of selected text only, ability
  to show page breaks in the text area. (Dale Anson)

}}}
{{{ API Changes

- new org.gjt.sp.utils.GenericGUIUtilities class, containing bits of
  org.gjt.sp.jedit.GUIUtilities suitable for the standalone TextArea
  package; all methods kept but deprecated and proxies (Eric Le Lay).

- refactor Help table of contents loading code to a separate class
  (HelpTOCLoader). Make relevant members public, so the help TOC
  is accessible to other code, e.g. the HelpServer plugin (Eric Le Lay).

}}}
{{{ Editing

- Unicode brackets (Patch #566 - Makarius)

- Updates for objectrexx mode (Patch #585 - Jack J. Woehr)

- Mode for m4 macro processor language (Patch #586 - Jack J. Woehr)

- Drawj2d edit mode (Patch #573 - A. Vontobel)

- Rust edit mode raw string fix (Patch #575 - Jordan Miner)

- Mode for Mavscript 2.0 (Patch #574 - A. Vontobel)

- New mode for swift (Patch #587 - Wayne Zhang)

- New mode for Java 9 module-info.java files (Dale Anson)

- Updated CSS mode provided by AdamS (Ticket #4003 - Dale Anson)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: